/*
    GSP for the Taurion blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

/**
 * General modification something can give to an existing numerical value,
 * e.g. an increase to a vehicle speed or combat damage.
 */
message StatModifier
{

  /**
   * Relative change to the base value, in percent.  This is added (or
   * subtracted if negative), so not a multiplicative factor.
   */
  optional sint32 percent = 1;

  /**
   * Absolute change to the base value.
   */
  optional sint32 absolute = 2;

}
